<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="@dimen/dimen_16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_marginTop="@dimen/dimen_12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/tvName"
        style="@style/B1"
        android:textColor="@color/colorNeutral70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_marginTop="@dimen/dimen_12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        android:id="@+id/lbBeforeTax"
        style="@style/B1"
        android:text="@string/invoice_amount_untaxed"
        android:textColor="@color/colorNeutral50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <androidx.appcompat.widget.AppCompatTextView
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/lbBeforeTax"
        style="@style/B1"
        android:id="@+id/tvBeforeTax"
        android:textColor="@color/colorNeutral70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_marginTop="@dimen/dimen_12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBeforeTax"
        android:id="@+id/lbDiscount"
        style="@style/B1"
        android:text="@string/invoice_discount"
        android:textColor="@color/colorNeutral50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <androidx.appcompat.widget.AppCompatTextView
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/lbDiscount"
        style="@style/B1"
        android:id="@+id/tvDiscount"
        android:textColor="@color/colorNeutral70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_marginTop="@dimen/dimen_12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDiscount"
        android:id="@+id/lbTotal"
        style="@style/B1"
        android:text="@string/invoice_total"
        android:textColor="@color/colorNeutral50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <androidx.appcompat.widget.AppCompatTextView
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/lbTotal"
        style="@style/B1"
        android:id="@+id/tvAmount"
        android:textColor="@color/colorNeutral70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>